--- a/ServerlessApplication/ServiceCloudVoiceLambdas.yaml
+++ b/ServerlessApplication/ServiceCloudVoiceLambdas.yaml
@@ -54,18 +54,12 @@ Parameters:
     Type: String
     Default: service-cloud-voice-contact-center-id
     Description: Connect Instance Id.
-  SalesforceAuthEndpoint:
-    Type: String
-    Default: https://login.salesforce.com/services/oauth2/token
-    Description: The authentication endpoint for Salesforce organisation and environment.
-  SalesforceRestApiEndpointBase:
-    Type: String
-    Default: https://login.salesforce.com/services/data/v54.0
-    Description: The endpoint for the organisational Salesforce REST API.
   PermissionBoundaryARN:
     Default: ''
     Type: String
     Description: IAM Permission Boundary ARN as defined by the admin
+
+
 
 Conditions:
   CreatePermissionBoundary:
@@ -203,8 +197,8 @@ Resources:
           ACCESS_TOKEN_PARAM_NAME: !Sub ${SalesforceRestApiAccessTokenSSMParamName}
           SUBJECT: !Sub ${SalesforceRestApiSubjectSSMParamName}
           AUDIENCE: !Sub ${SalesforceRestApiAudienceSSMParamName}
-          SALESFORCE_AUTH_ENDPOINT: !Sub ${SalesforceAuthEndpoint}
-          SALESFORCE_REST_API_ENDPOINT_BASE: !Sub ${SalesforceRestApiEndpointBase}
+          SALESFORCE_AUTH_ENDPOINT: https://login.salesforce.com/services/oauth2/token
+          SALESFORCE_REST_API_ENDPOINT_BASE: https://login.salesforce.com/services/data/v54.0
           LOG_LEVEL: "info"
       Policies:
         - Statement:
@@ -1524,4 +1518,4 @@ Metadata:
     ReadmeUrl: ../APP_README.md
     HomePageUrl: https://www.salesforce.com/products/service-cloud/solutions/call-center-management
     SourceCodeUrl: https://github.com/service-cloud-voice/ServiceCloudVoiceLambdas
-    SemanticVersion: 13.1.0
+    SemanticVersion: 13.2.0
